BNF.txt
<Commands> ::= "add_storage" <Storage> | "sell" <String> <Int> | "show_store" | "restock" <String> <Int> | "remove_item" <String>

<GroceryStore> ::= [<Item>]

<Item> ::= <FoodItems> <Int> | <Beverages> <Int> | <HouseholdSupplies> <Int>

<Storage> ::= <Item> | <Storage> <Item>

<FoodItems> ::= <Fruits> | <Vegetables> | <Grains> | <Dairy> | <Meats>

<Fruits> ::= <Apples> | <Bananas> | <Oranges>

<Vegetables> ::= <Carrots> | <Potatoes> | <Spinach>

<Grains> ::= <Rice> | <Bread> | <Pasta>

<Dairy> ::= <Milk> | <Cheese> | <Yogurt>

<Meats> ::= <Chicken> | <Beef> | <Fish>

<Beverages> ::= <Soda> | <Juice> | <Water>

<HouseholdSupplies> ::= <CleaningProducts> | <PaperGoods>

<CleaningProducts> ::= <Detergent> | <Soap>

<PaperGoods> ::= <PaperTowels> | <ToiletPaper>

<String> is any of the specific items within the categories of <FoodItems> or <HouseholdSupplies>
